--- a/.github/workflows/upload-to-pypi.yml
+++ b/.github/workflows/upload-to-pypi.yml
@@ -52,7 +52,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           # Disable explicitly python 3.10 and building PyPy wheels
-          CIBW_SKIP: cp310-* pp* cp{38,39}-manylinux_i686 *-musllinux_*
+          CIBW_SKIP: pp* cp{38,39}-manylinux_i686 *-musllinux_*
           CIBW_PRERELEASE_PYTHONS: False
           # Manually force a version (and avoid building local wheels)
           CIBW_ENVIRONMENT: "SETUPTOOLS_SCM_PRETEND_VERSION=${{ github.event.inputs.overrideVersion }}"
