Revert "ci(cibuilwheel): comment upload to pypi for temporary refinement"
This reverts commit 840f7bfeb570a7dc7c1718bff48582f31c133057.

--- a/.github/workflows/upload-to-pypi.yml
+++ b/.github/workflows/upload-to-pypi.yml
@@ -99,9 +99,9 @@ jobs:
       with:
         name: artifact
         path: dist
-    # - uses: pypa/gh-action-pypi-publish@v1.4.1
-    #   with:
-    #     user: ${{ secrets.PYPI_USERNAME }}
-    #     password: ${{ secrets.PYPI_PASSWORD }}
+    - uses: pypa/gh-action-pypi-publish@v1.4.1
+      with:
+        user: ${{ secrets.PYPI_USERNAME }}
+        password: ${{ secrets.PYPI_PASSWORD }}
 
 
