--- a/.github/workflows/upload-to-pypi.yml
+++ b/.github/workflows/upload-to-pypi.yml
@@ -51,8 +51,8 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          # Disable explicitly python 3.10 and building PyPy wheels
-          CIBW_SKIP: cp310-* pp*
+          # Disable explicitly building PyPI wheels for specific configurations
+          CIBW_SKIP: pp* cp{38,39,310}-manylinux_i686 *-musllinux_* cp310-win32
           CIBW_PRERELEASE_PYTHONS: False
           # Manually force a version (and avoid building local wheels)
           CIBW_ENVIRONMENT: "SETUPTOOLS_SCM_PRETEND_VERSION=${{ github.event.inputs.overrideVersion }}"
