test: adding --cov flag

--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -50,7 +50,7 @@ jobs:
         python -m pip install .[test,display]
     - name: Test with pytest
       run: |
-        python -m pytest --cov-report=xml --cov-report=term:skip-covered
+        python -m pytest --cov --cov-report=xml --cov-report=term:skip-covered
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
