--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ docs =
     jupyter
     librosa
     matplotlib
-    mkdocs==1.1.2
+    mkdocs
     mkdocs-macros-plugin
     mkdocs-material
     mkdocs-section-index
