--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,9 +77,11 @@ nav:
     - 'Simple usages':
       - 'Basic usage': examples/basic-usage.ipynb
     - 'Advanced usages':
+      - 'Dimensions ensemble model': examples/ensemble-dimensions.ipynb
       - 'Kernel change point detection: a performance comparison': examples/kernel-cpd-performance-comparison.ipynb
       - 'Music segmentation': examples/music-segmentation.ipynb
       - 'Text segmentation': examples/text-segmentation.ipynb
+
   - Code reference:
       - code-reference/index.md
       - Base classes: code-reference/base-reference.md
