--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,11 @@ testpaths = ["tests"]
 
 [tool.setuptools_scm]
 write_to = "src/ruptures/version.py"
+
+# PEP 621 dependencies declaration
+# adapt to your dependencies manager
+[project]
+dependencies = [
+    "mkdocstrings[python]>=0.18", # https://mkdocstrings.github.io/handlers/overview/#about-the-python-handlers
+]
+
