ci(docs): put dependency in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,7 +57,7 @@ docs =
     mkdocs-macros-plugin
     mkdocs-material
     mkdocs-section-index
-    mkdocstrings
+    mkdocstrings[python]>=0.18 # https://mkdocstrings.github.io/handlers/overview/#about-the-python-handlers
     mknotebooks
     pymdown-extensions
     nltk
