--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires = [
     "setuptools_scm[toml]>=3.4",  # https://scikit-hep.org/developer/packaging#git-tags-official-pypa-method
     "oldest-supported-numpy",  # https://github.com/scipy/oldest-supported-numpy
     "scipy>=0.19.1",
+    "scikit-learn>=1.0",
 ]
 build-backend = "setuptools.build_meta"
 
