--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,7 @@ repos:
   hooks:
     - id: docformatter
       args: [--in-place]
+      exclude: mkdocs_macros.py
 - repo: https://github.com/PyCQA/flake8
   rev: 6.0.0
   hooks:
