--- a/.github/workflows/upload-to-pypi.yml
+++ b/.github/workflows/upload-to-pypi.yml
@@ -18,20 +18,20 @@ jobs:
     name: Make SDist
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10'
-    - name: Install deps
-      run: python -m pip install build twine
-    - name: Build SDist
-      run: python -m build --sdist
-    - uses: actions/upload-artifact@v2
-      with:
-        path: dist/*.tar.gz
-    - name: Check metadata
-      run: twine check dist/*
+      - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+      - name: Install deps
+        run: python -m pip install build twine
+      - name: Build SDist
+        run: python -m build --sdist
+      - uses: actions/upload-artifact@v2
+        with:
+          path: dist/*.tar.gz
+      - name: Check metadata
+        run: twine check dist/*
 
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
@@ -56,6 +56,7 @@ jobs:
           CIBW_PRERELEASE_PYTHONS: False
           # Manually force a version (and avoid building local wheels)
           CIBW_ENVIRONMENT: "SETUPTOOLS_SCM_PRETEND_VERSION=${{ github.event.inputs.overrideVersion }}"
+          CIBW_ARCHS_MACOS: x86_64 arm64
 
       - uses: actions/upload-artifact@v2
         with:
@@ -95,13 +96,11 @@ jobs:
     needs: [build_wheels, build_aarch64_wheels, make_sdist]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/download-artifact@v2
-      with:
-        name: artifact
-        path: dist
-    - uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: ${{ secrets.PYPI_USERNAME }}
-        password: ${{ secrets.PYPI_PASSWORD }}
-
-
+      - uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: dist
+      - uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: ${{ secrets.PYPI_USERNAME }}
+          password: ${{ secrets.PYPI_PASSWORD }}
