--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
     - id: docformatter
       args: [--in-place]
       exclude: mkdocs_macros.py
+      language: python
 - repo: https://github.com/PyCQA/flake8
   rev: 7.0.0
   hooks:
