--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,8 +22,9 @@ repos:
   rev: v1.7.5
   hooks:
     - id: docformatter
-      args: [--in-place]
+      additional_dependencies: [tomli]
       exclude: mkdocs_macros.py
+      args: [--config ./pyproject.toml]
 - repo: https://github.com/PyCQA/flake8
   rev: 7.0.0
   hooks:
