--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -52,7 +52,9 @@ jobs:
       run: |
         python -m pytest --cov --cov-report=xml --cov-report=term:skip-covered
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v2
+      uses: codecov/codecov-action@v5
+      # env:
+      #   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         files: ./coverage.xml
         flags: unittests
