--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -53,12 +53,11 @@ jobs:
         python -m pytest --cov --cov-report=xml --cov-report=term:skip-covered
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
-      # env:
-      #   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         files: ./coverage.xml
         flags: unittests
         fail_ci_if_error: true
+        token: ${{ secrets.CODECOV_TOKEN }}
     - uses: actions/upload-artifact@v4
       with:
         path: coverage.xml
