--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ plugins:
         - ruptures
       handlers:
         python:
-          selection:
+          options:
             filters:
               - "!^_"  # exclude all members starting with _
               - "^__init__$"  # but always include __init__ modules and methods
@@ -124,6 +124,7 @@ theme:
     - navigation.tabs
     - search.highlight
 extra_javascript:
-  - javascripts/config.js
+  - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
