--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = ruptures
+version = attr: ruptures.version.__version__
 url = https://github.com/deepcharles/ruptures/
 license = BSD-2-Clause
 license_files = LICENSE
