--- a/.github/workflows/upload-to-pypi.yml
+++ b/.github/workflows/upload-to-pypi.yml
@@ -50,7 +50,8 @@ jobs:
 
       # Used to host cibuildwheel
       - uses: actions/setup-python@v6
-
+        with:
+          python-version: "3.13"
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel
 
